/** @page CHANGES

@section 2.0.0-dev Changes with libapreq2-2.0.0-dev

- October 24, 2003 - C API: libapreq_cgi.c [randyk, joes]

CGI environment defined by env/libapreq_cgi.c is functional
(with tests added to env/t).  This library may soon be incorporated
directly into libapreq2 as a default enviroment.

- October 23, 2003 - C API: mod_apreq.c [joes]

Added ctx->saw_eos to ensure we don't read from upstream filters
after receiving an eos bucket.  Otherwise it was possible for
two eos buckets to appear when a prefetch read is involved, which
breaks other modules like mod_proxy.  This bug was uncovered by
Philippe Chiasson.  mod_apreq's apreq_env_majic_number bumped to
reflect the added fixes.

- October 17, 2003 - configure: --enable-perl-glue [joes]

The --enable-perl-glue option integrates the perl glue into the 
normal Unix build cycle.  It is disabled by default, but is silently 
reenabled if the user configures the source tree via Makefile.PL.

- October 14, 2003 - C API [joes]

Added apreq_header_attribute() and fixed mfd parser to allow 
"charset" attribute to appear in the Content-Type header.  Sven
Geisler points out that Opera 7.20 does generate such headers. 

- October 14, 2003 - C API [joes]

Added versioning API following http://apr.apache.org/versioning.html
apreq_env renamed apreq_env_name, and apreq_env_magic_number added
to provide versioning for environments (modules).  The header files 
are now installed to "include/apreq2", and the library is renamed 
"libapreq2". Also added an apreq2-config script based on apu-config.

- October 8, 2003 - configure: static mod_apreq.c [Bojan Smojver, joes]

Add --with-apache2-src configure option, along with --with-apr-config
and --with-apu-config, and provide support for compiling mod_apreq 
into httpd as a static apache module.

- October 1, 2003 - C API: mod_apreq.c [joes]

Support for internal redirects added to the mod_apreq filter.
This ensures any POST data prefetched in the main request 