@@ -147,7 +147,7 @@ sub preprocess
         ::c_macro("APREQ_DECLARE", "apreq.h")->();
         ::c_macro("APREQ_DECLARE_HOOK", "apreq_parsers.h")->();
         ::c_macro("APREQ_DECLARE_PARSER", "apreq_parsers.h")->();
-        ::c_macro("APREQ_DECLARE_LOG", "apreq_env.h")->();
+#        ::c_macro("APREQ_DECLARE_LOG", "apreq_env.h")->();
         ::c_macro("APR_DECLARE")->();
         ::c_macro("XS")-> ();
     }
