@@ -1,5 +1,15 @@
 /** @page CHANGES
 
+@section 2.0.1-dev Changes with libapreq2-2.0.1-dev
+
+-October 26, 2003 - C API [joes]
+
+Incorporate libapreq_cgi into libapreq2 as the default environment,
+and add apreq_env_t and initializer apreq_env_module() to manage the
+environment at runtime (determining the environment at load-time
+was problematic on non-ELF systems).
+
+
 @section 2.0.0-dev Changes with libapreq2-2.0.0-dev
 
 - October 24, 2003 - C API: libapreq_cgi.c [randyk, joes]
